--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html, body {
   }
 
   #game-wrapper {
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,5 +50,11 @@ html, body {
     background-color: #1111118f;
     width: 100%;
     height: 100%;
+  }
+
+  .title{
+    font-size: larger;
+    text-align: center;
+    color: white;
   }
 
